[package]
name = "tcp_resetter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "1.1.0"
regex = "1.10.2"
simple-dns = "0.5.7"
rayon = "1.8.0"
toml = "0.8.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.75"
thiserror = "1.0.50"
dns-lookup = "2.0.4"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.8.0"
slog-scope = "4.4.0"
